--- a/html/productos.html
+++ b/html/productos.html
@@ -19,6 +19,9 @@
                 <img src="../imagen/logo.png" alt="logo" width="100" height="100">
             </a>
         </div>
+        <div class="hamb">
+            <img src="../imagen/icono-hamburguesa.png" alt="logo">
+        </div>
         <div>
             <nav>
                 <ul>
