--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <img src="imagen/logo.png" alt="logo">
             </a>
         </div>
+        <div class="hamb">
+            <img src="imagen/icono-hamburguesa.png" alt="logo">
+        </div>
         <div>
             <nav>
                 <ul>
