Segunda entrega Proyecto Final

--- a/html/quienes-somos.html
+++ b/html/quienes-somos.html
@@ -18,7 +18,7 @@
     <header>
         <div>
             <a href="../index.html">
-                <img src="../imagen/logo.png" alt="logo" width="100" height="100">
+                <img src="../imagen/logo.png" alt="logo">
             </a>
         </div>
         <div>
@@ -68,7 +68,7 @@
                                 <a class="nav-link" href="../html/rutina.html">Rutina</a>
                             </li>
                             <li>
-                                <a class="nav-link" href="../html/quienes-somos.html">Quienes</a>
+                                <a class="nav-link" href="../html/quienes-somos.html">Quienes Somos</a>
                             </li>
                             <li>
                                 <a class="nav-link" href="../html/contacto.html">Contacto</a>
@@ -119,8 +119,12 @@
            <input type="button" value="Enviar" class="botones">
         </div>
        <div class="footerSocial">
-           <img src="../imagen/facebook.webp" alt="logofacebook">
-           <img src="../imagen/instagram.png.crdownload" alt="logoinstagram">
+            <a href="https://www.facebook.com/">
+                <img src="../imagen/facebook.png" alt="logofacebook">
+            </a>
+            <a href="https://www.instagram.com/">
+                <img src="../imagen/instagram.png.crdownload" alt="logoinstagram">
+            </a>
        </div>
        
    </footer>
