--- a/html/productos.html
+++ b/html/productos.html
@@ -12,17 +12,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body class="family">
     <!--FILA DEL LOGO Y EL MENU-->
     <header>
         <div>
             <a href="../index.html">
-                <img src="../imagen/logo.png" alt="logo" width="100" height="100">
+                <img src="../imagen/logo.png" alt="logo">
             </a>
-        </div>
-        <div class="hamb">
-            <img src="../imagen/icono-hamburguesa.png" alt="logo">
         </div>
         <div>
             <nav>
@@ -71,7 +69,7 @@
                                 <a class="nav-link" href="../html/rutina.html">Rutina</a>
                             </li>
                             <li>
-                                <a class="nav-link" href="../html/quienes-somos.html">Quienes</a>
+                                <a class="nav-link" href="../html/quienes-somos.html">Quienes Somos</a>
                             </li>
                             <li>
                                 <a class="nav-link" href="../html/contacto.html">Contacto</a>
@@ -91,14 +89,14 @@
             <p>Sin Parabenos | Sin Petrolatos | Sin Sulfatos | Sin Aluminio | Sin filtros solares químicos | Cruelty free | Veganos </p>
         </div>
         <div class="fotosProductos">
-            <img src="../imagen/crema.jpg" alt="crema" width="300" height="300">
-            <img src="../imagen/serumamarillo.jpg" alt="serum" width="200" height="300">
-            <img src="../imagen/serumflores.jpg" alt="serum" width="350" height="300">
-            <img src="../imagen/accesorios.jpg" alt="accesorios" width="300" height="300">
-            <img src="../imagen/crema-rosa.jpg" alt="cremarosa" width="200" height="300">
-            <img src="../imagen/crema-violeta.jpg" alt="serum" width="250" height="300"> 
-            <img src="../imagen/exfoliante.jpg" alt="serum" width="300" height="300">  
-            <img src="../imagen/crema-cuerpo.jpg" alt="cremacuerpo" width="400" height="300"> 
+            <img class="wow animate__animated animate__fadeInUp" src="../imagen/crema.jpg" alt="crema" width="300" height="300">
+            <img class="wow animate__animated animate__fadeInUp" src="../imagen/serumamarillo.jpg" alt="serum" width="200" height="300">
+            <img class="wow animate__animated animate__fadeInUp"src="../imagen/serumflores.jpg" alt="serum" width="350" height="300">
+            <img class="wow animate__animated animate__fadeInUp"src="../imagen/accesorios.jpg" alt="accesorios" width="300" height="300">
+            <img class="wow animate__animated animate__fadeInUp"src="../imagen/crema-rosa.jpg" alt="cremarosa" width="200" height="300">
+            <img class="wow animate__animated animate__fadeInUp"src="../imagen/crema-violeta.jpg" alt="serum" width="250" height="300"> 
+            <img class="wow animate__animated animate__fadeInUp"src="../imagen/exfoliante.jpg" alt="serum" width="300" height="300">  
+            <img class="wow animate__animated animate__fadeInUp" src="../imagen/crema-cuerpo.jpg" alt="cremacuerpo" width="400" height="300"> 
         </div>
     </main>
     <!--TERMINA LA INFORMACION DE MI SECCION-->
@@ -126,10 +124,20 @@
            <input type="button" value="Enviar" class="botones">
         </div>
        <div class="footerSocial">
-           <img src="../imagen/facebook.webp" alt="logofacebook">
-           <img src="../imagen/instagram.png.crdownload" alt="logoinstagram">
+            <a href="https://www.facebook.com/">
+                <img src="../imagen/facebook.png" alt="logofacebook">
+            </a>
+            <a href="https://www.instagram.com/">
+                <img src="../imagen/instagram.png.crdownload" alt="logoinstagram">
+            </a>
        </div>
    </footer>
     <!--FIN DEL FOOTER-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js">
+</script>
+<script>
+   new WOW().init();
+</script>
+
 </body>
 </html>
