Segunda entrega Proyecto Final.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <nav class="navbar navbar-light colorNavbar">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"></a>
-              <img id="logoCel" src="../pruebaGitHub/imagen/logo.png" alt="logo">
+              <img id="logoCel" src="imagen/logo.png" alt="logo">
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                 <span class="navbar-toggler-icon"></span>
               </button>
