Desafío SASS II + SEO

--- a/html/productos.html
+++ b/html/productos.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flora</title>
+    <meta name="description" content="¿Queres cuidarte de una manera saludable, utilizando ingredientes naturales, que cuidan, protegen y respetan nuestro cuerpo y el medio ambiente? Tenemos una amplia gama de productos para vos!">
+    <title>Sección de venta de productos de Flora, cosmética natural. Aquí encontraras todos nuestros productos, su descripción y la forma de adquirirlos</title>
     <link rel="shortcut icon" href="../imagen/favicon.png">
     <link rel="stylesheet" href="../css/estilo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
