--- a/html/rutina.html
+++ b/html/rutina.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flora</title>
+    <meta name="description" content="¿Querés saber cuál es la rutina apropiada para vos? ¡Te invito a que realices el siguiente test y lo averigues!">
+    <title>Sección de armado de Rutina de los productos de Flora, cosmética natural. Aquí encontraras un cuestionario diseñado para que encuentres tu rutina ideal</title>
     <link rel="shortcut icon" href="../imagen/favicon.png">
     <link rel="stylesheet" href="../css/estilo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
