--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flora</title>
+    <meta name="keyword" content="flora, cosmetica natural, cuidado piel, sin parabenos, sin petrolatos, sin siliconas, sin sulfatos, vegano, cruelty free">
+    <meta name="description" content="Somos una empresa Argentina que desarrolla y comercializa productos de cosmetica y cuidado personal.Basamos nuestras formulaciones en ingredientes naturales, evitando la utilizacion de sustancias como parabenos y derivados del petroleo. Trabajamos solo con ingredientes de origen vegetal y no testeamos en animales. Te traemos productos frescos, naturales, originales y divertidos. Te acercamos a través de nuestros productos lo último de las tendencias a nivel mundial y todo 100% industria nacional. Nuestros productos son seguros, eficaces y de calidad.">
+    <title>Página de inicio de Flora, empresa dedicada a la producción de cosmética natural para el cuidado de la piel</title>
     <link rel="shortcut icon" href="imagen/favicon.png">
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
