--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flora</title>
+    <meta name="description" content="Aquí encontraras un formulario diseñado para que puedas contactarnos">
+    <title>Sección de Contacto de Flora con un formulario diseñado para que puedas contactarnos</title>
     <link rel="shortcut icon" href="../imagen/favicon.png">
     <link rel="stylesheet" href="../css/estilo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
