--- a/html/quienes-somos.html
+++ b/html/quienes-somos.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flora</title>
+    <meta name="description" content="Conocé mas sobre Flora! Aquí encontraras información sobre la empresa y un video promocional de la misma">
+    <title>Sección Quienes Somos de los productos de Flora, cosmética natural. Aquí encontraras información sobre la empresa y un video promocional de la misma</title>
     <link rel="shortcut icon" href="../imagen/favicon.png">
     <link rel="stylesheet" href="../css/estilo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
