Proyecto Final entrega final

--- a/html/productos.html
+++ b/html/productos.html
@@ -48,11 +48,11 @@
     <div id="navbarCelu">
         <nav class="navbar navbar-light colorNavbar">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"></a>
-              <img id="logoCel" src="../imagen/logo.png" alt="logo">
-              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+                <a class="navbar-brand" href="#"></a>
+                <img id="logoCel" src="../imagen/logo.png" alt="logo">
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
                         <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu Flora</h5>
@@ -78,7 +78,7 @@
                         </ul>
                     </div>
                 </div>
-              </div>
+                </div>
             </div>
         </nav>
     </div>
@@ -101,43 +101,45 @@
         </div>
     </main>
     <!--TERMINA LA INFORMACION DE MI SECCION-->
-     <!--INICIO DEL FOOTER-->
-     <footer>
+    <!--INICIO DEL FOOTER-->
+    <footer>
         <div class="logoFooter">
-           <img src="../imagen/logo.png" alt="logo">
+            <a href="../index.html">
+                <img src="../imagen/logo.png" alt="logo">
+            </a>
         </div>
         <div class="menuFooter">
-           <ul>
-               <li>
-                   <a href="productos.html">PRODUCTOS</a>
-               </li>
-               <li>
-                   <a href="rutina.html">RUTINA</a>
-               </li>
-               <li>
-                   <a href="contacto.html">CONTACTO</a>
-               </li>
-           </ul>
+            <ul>
+                <li>
+                    <a href="productos.html">PRODUCTOS</a>
+                </li>
+                <li>
+                    <a href="rutina.html">RUTINA</a>
+                </li>
+                <li>
+                    <a href="contacto.html">CONTACTO</a>
+                </li>
+            </ul>
         </div>
         <div class="newsletterFooter">
-           <label for="email">Únete a nuestro Newsletter</label>
-           <input type="email" name="email"id="email" placeholder="ejemplo@email.com" class="botones">
-           <input type="button" value="Enviar" class="botones">
+            <label for="email">Únete a nuestro Newsletter</label>
+            <input type="email" name="email"id="email" placeholder="ejemplo@email.com" class="botones">
+            <input type="button" value="Enviar" class="botones">
         </div>
-       <div class="footerSocial">
+        <div class="footerSocial">
             <a href="https://www.facebook.com/">
                 <img src="../imagen/facebook.png" alt="logofacebook">
             </a>
             <a href="https://www.instagram.com/">
                 <img src="../imagen/instagram.png.crdownload" alt="logoinstagram">
             </a>
-       </div>
-   </footer>
+        </div>
+    </footer>
     <!--FIN DEL FOOTER-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js">
 </script>
 <script>
-   new WOW().init();
+    new WOW().init();
 </script>
 
 </body>
