--- a/html/rutina.html
+++ b/html/rutina.html
@@ -149,7 +149,9 @@
      <!--INICIO DEL FOOTER-->
      <footer>
         <div class="logoFooter">
-           <img src="../imagen/logo.png" alt="logo">
+            <a href="../index.html">
+                <img src="../imagen/logo.png" alt="logo">
+            </a>
         </div>
         <div class="menuFooter">
            <ul>
