--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     <div id="navbarCelu">
         <nav class="navbar navbar-light colorNavbar">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"></a>
-              <img id="logoCel" src="imagen/logo.png" alt="logo">
-              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+                <a class="navbar-brand" href="#"></a>
+                <img id="logoCel" src="imagen/logo.png" alt="logo">
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
                         <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu Flora</h5>
@@ -75,7 +75,7 @@
                         </ul>
                     </div>
                 </div>
-              </div>
+                </div>
             </div>
         </nav>
     </div>
@@ -85,25 +85,25 @@
     <main>
         <div id="carouselExampleFade" class="carousel slide carousel-fade animate__animated animate__slideInUp" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="imagen/home.jpg" class="d-block w-100" alt="carousel1">
-              </div>
-              <div class="carousel-item">
-                <img src="imagen/carousel2.jpeg" class="d-block w-100" alt="carousel2">
-              </div>
-              <div class="carousel-item">
+                <div class="carousel-item active">
+                    <img src="imagen/home.jpg" class="d-block w-100" alt="carousel1">
+                </div>
+                <div class="carousel-item">
+                    <img src="imagen/carousel2.jpeg" class="d-block w-100" alt="carousel2">
+                </div>
+                <div class="carousel-item">
                 <img src="imagen/carousel3.jpeg" class="d-block w-100" alt="carousel3">
-              </div>
+                </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
             </button>
-          </div>
+            </div>
         <div>
             <h1 class="tituloProductos">Productos destacados</h1>
         </div>
@@ -130,12 +130,14 @@
         </div>
     </main>
     <!--TERMINA LA INFORMACION DE MI SECCION-->
-     <!--INICIO DEL FOOTER-->
-     <footer>
-         <div class="logoFooter">
-            <img src="imagen/logo.png" alt="logo">
-         </div>
-         <div class="menuFooter">
+    <!--INICIO DEL FOOTER-->
+    <footer>
+        <div class="logoFooter">
+            <a href="index.html">
+                <img src="imagen/logo.png" alt="logo">
+            </a>
+        </div>
+        <div class="menuFooter">
             <ul>
                 <li>
                     <a href="html/productos.html">PRODUCTOS</a>
@@ -147,12 +149,12 @@
                     <a href="html/contacto.html">CONTACTO</a>
                 </li>
             </ul>
-         </div>
-         <div class="newsletterFooter">
+        </div>
+        <div class="newsletterFooter">
             <label for="email">Únete a nuestro Newsletter</label>
             <input type="email" name="email"id="email" placeholder="ejemplo@email.com" class="botones">
             <input type="button" value="Enviar" class="botones">
-         </div>
+        </div>
         <div class="footerSocial">
             <a href="https://www.facebook.com/">
                 <img src="imagen/facebook.png" alt="logofacebook">
@@ -166,7 +168,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js">
     </script>
     <script>
-       new WOW().init();
+    new WOW().init();
     </script>
 </body>
 </html>
